Fix missing line break, remove extra spaces

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -11,6 +11,8 @@ $line-height: 160%
 $color-text: #4B5563
 $color-red: #FF6D6D
 $color-green: #5CC679
+$color-green-light: #7AED9A
+$color-yellow: #FFE500
 $color-primary: #C463FF
 $color-white: #FFF
 $color-contrast: #F9FBFC
